--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <body>
 	<!-- Fixed navbar -->    
     <div id="navbar">
+        <img src="/assets/images/logo/D-List-Logo-Quartersize.png"/>
         <span style="">
             <h1 class="logo" style="margin-bottom: 0px;">
                 &nbsp;<a class="logo" href="/">D-List Coders</a>
