--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,11 @@
   <body>
 	<!-- Fixed navbar -->    
     <div id="navbar">
-        <img src="/assets/images/logo/D-List-Logo-Quartersize.png"/>
-        <span style="">
+        <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left;"/>
+        <span style="display: flex; align-items: center;font-size: 2.5em;">
             <h1 class="logo" style="margin-bottom: 0px;">
                 &nbsp;<a class="logo" href="/">D-List Coders</a>
             </h1>
-        </span>
-        <span style="">
-            &nbsp;&nbsp;&nbsp;Established  2024
         </span>
 	  </div>
     <div id="headerSpacer"></div>
