--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <body>
 	<!-- Fixed navbar -->    
     <div id="navbar">
-        <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left;"/>
+        <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; width: 50%; height: 50%;"/>
         <span style="display: flex; align-items: center;font-size: 2.5em;">
             <h1 class="logo" style="margin-bottom: 0px;">
                 &nbsp;<a class="logo" href="/">D-List Coders</a>
