--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
   <body>
 	<!-- Fixed navbar -->    
     <div id="navbar">
-        <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; width: 30%; height: 30%;"/>
-        <span style="display: flex; align-items: center;font-size: 2.5em;">
+        <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 15em;"/>
+        <span style="display: flex; align-items: center;font-size: 6em;">
             <h1 class="logo" style="margin-bottom: 0px;">
                 &nbsp;<a class="logo" href="/">D-List Coders</a>
             </h1>
