--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
 	<!-- Fixed navbar -->    
     <div id="navbar">
         <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 15em;"/>
-        <span style="display: flex; align-items: center;font-size: 6em;">
-            <h1 class="logo" style="margin-bottom: 0px;">
+        <span style="display: flex; align-items: center; height: 15em;">
+            <h1 class="logo" style="margin-bottom: 0px; font-size: 7em;">
                 &nbsp;<a class="logo" href="/">D-List Coders</a>
             </h1>
         </span>
