--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@ body {
 
 a {
   color: #EEBB5F;
-  text-shadow: .1em .1em .75em rgb(0,250,0);
+  text-shadow: .1em .1em .75em gold;
 }
 
 h1, h2, h3, h4, h5, h6 {
