--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,6 +44,7 @@ div#articles ul li, div#tips ul li {
 }
 
 #xfooter {
+  color: #EEBB5F;
   clear: left; 
   float: left; 
   width: 100%; 
@@ -59,7 +60,6 @@ h1, h2, h3 {
 }
 
 #navbar {
-	position: fixed; 
 	top: 0px; 
 	left: 0px; 
 	width: 100%; 
