--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,16 +11,15 @@
   </head>
   <body>
 	<!-- Fixed navbar -->    
-    <div id="navbar">
+    <div id="navbar" style="display: flex; align-items: center; height: 15em;">
         <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 15em;"/>
         <span style="display: flex; align-items: center; height: 15em;">
             <h1 class="logo" style="margin-bottom: 0px; font-size: 7em;">
-                &nbsp;<a class="logo" href="/">D-List Coders</a>
+                <a class="logo" href="/">D-List Coders</a>
             </h1>
         </span>
 	  </div>
-    <div id="headerSpacer"></div>
-    <div id="content" style="">
+    <div id="content">
 
       {{ content }}
 
