--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,10 @@
   </head>
   <body>
 	<!-- Fixed navbar -->    
-    <div id="navbar" style="display: flex; align-items: center; height: 15em;">
+    <div id="navbar" style="display: flex; align-items: center;">
         <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 15em;"/>
-        <span style="display: flex; align-items: center; height: 15em;">
-            <h1 class="logo" style="margin-bottom: 0px; font-size: 7em;">
+        <span>
+            <h1 id="siteTitle">
                 <a class="logo" href="/">D-List Coders</a>
             </h1>
         </span>
