--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <title>D-List Coders</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="author" content=""/>
-    <meta name="keywords" content=""/>
-    <link rel="icon" href="/binary.png">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  </head>
-  <body>
-	<!-- Fixed navbar -->    
-    <div id="navbar" style="display: flex; align-items: center;">
-        <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 15em;"/>
-            <h1 id="siteTitle">
-                <a class="logo" href="/">D-List Coders</a>
-            </h1>
-	  </div>
-    <div id="content">
 
-      {{ content }}
+<head>
+  <meta charset="utf-8" />
+  <title>D-List Coders</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="" />
+  <meta name="keywords" content="" />
+  <link rel="icon" href="/binary.png">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+</head>
 
-    </div>
-    
-    <div id="xfooter" style="">
-      &nbsp;&nbsp;&nbsp;<span>Improve every day.</span>
-    </div>
-    
-  </body>
+<body>
+  <!-- Fixed navbar -->
+  <div id="navbar" style="display: flex; align-items: center;">
+    <h1 id="siteTitle">
+      <a class="logo" href="/">D-List</a>
+    </h1>
+    <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 15em;" />
+    <h1 id="siteTitle">
+      <a class="logo" href="/">Coders</a>
+    </h1>
+  </div>
+  <div id="content">
+
+    {{ content }}
+
+  </div>
+
+  <div id="xfooter" style="">
+    &nbsp;&nbsp;&nbsp;<span>Improve every day.</span>
+  </div>
+
+</body>
+
 </html>
-
