--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,15 @@
 <body>
   <!-- Fixed navbar -->
   <div id="navbar" style="display: flex; align-items: center;">
-    <h1 id="siteTitle">
-      <a class="logo" href="/">D-List</a>
+    <a class="logo" href="/">
+    <h1 id="siteTitle" style="text-wrap:">
+      D-List
     </h1>
     <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 15em;" />
     <h1 id="siteTitle">
-      <a class="logo" href="/">Coders</a>
+      Coders
     </h1>
+    </a>
   </div>
   <div id="content">
 
