--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
   <!-- Fixed navbar -->
   <div id="navbar" style="display: flex; align-items: center;">
     <a class="logo" href="/">
-    <h1 id="siteTitle" style="text-wrap:">
+    <h1 id="siteTitle" style="text-wrap: nowrap; float: left;">
       D-List
     </h1>
-    <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 15em;" />
-    <h1 id="siteTitle">
+    <img src="/assets/images/logo/D-List-Logo-Header-Half.png" style="float: left; height: 10em;" />
+    <h1 id="siteTitle" style="text-wrap: nowrap; float: left;">
       Coders
     </h1>
     </a>
