--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,7 @@ div#articles ul li, div#tips ul li {
 #siteTitle {
   margin-bottom: 0px; 
   font-size: 6em;
+  text-shadow: .1em .1em 5em gold; 
 }
 
 #xfooter {
