--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,8 @@
   <!-- Fixed navbar -->
   <div id="navbar" style="display: flex; align-items: center;">
     <div>
-      <a class="logo" href="/">
+    </div>
+    <a class="logo" href="/">
         <h1 id="siteTitle" style="text-wrap: nowrap; float: left;">
           D-List
         </h1>
@@ -24,8 +25,9 @@
           Coders
         </h1>
       </a>
+      <div>
+      </div>
     </div>
-  </div>
   <div id="content">
 
     {{ content }}
