--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,10 @@
 <body>
   <!-- Fixed navbar -->
   <div id="navbar" style="display: flex; align-items: center;">
-    <div>
+    <div style="float: left; width: 100%;">
     </div>
-    <a class="logo" href="/">
+    <div style="float: left; width: 100%;">
+      <a class="logo" href="/">
         <h1 id="siteTitle" style="text-wrap: nowrap; float: left;">
           D-List
         </h1>
@@ -25,9 +26,10 @@
           Coders
         </h1>
       </a>
-      <div>
-      </div>
     </div>
+    <div style="float: left; width: 100%;">
+    </div>
+  </div>
   <div id="content">
 
     {{ content }}
