--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,7 @@
 <body>
   <!-- Fixed navbar -->
   <div id="navbar" style="display: flex; align-items: center;">
-    <div style="float: left; width: 100%;">
-    </div>
-    <div style="float: left; width: 100%;">
+    <div style="left: 50%;transform: translateX(-50%);">
       <a class="logo" href="/">
         <h1 id="siteTitle" style="text-wrap: nowrap; float: left;">
           D-List
@@ -26,8 +24,6 @@
           Coders
         </h1>
       </a>
-    </div>
-    <div style="float: left; width: 100%;">
     </div>
   </div>
   <div id="content">
