Added article about generic parameters.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,12 @@ code .gutter {
   width: 3em;
 }
 
+.articles li {
+  background: #111100;
+  padding: 1em;
+  border-radius: 2em;
+}
+
 body {
   background-image: url("");	
   background-color: black;
